--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for App-ShellCompleter-CpanUpload
 
-0.01    2015-01-02 (PERLANCAR) (unreleased)
+0.01    2015-01-02 (PERLANCAR)
 
         - First release.
