--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for App-ShellCompleter-CpanUpload
 
+0.02    2015-01-02 (PERLANCAR)
+
+	- No functional changes.
+
+	- [Bugfix] Forgot to decline in completion routine.
+
+
 0.01    2015-01-02 (PERLANCAR)
 
         - First release.
