--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for App-ShellCompleter-CpanUpload
 
+0.05    2015-09-27 (PERLANCAR)
+
+        - No functional changes.
+
+        - Rebuild with updated Getopt::Long::Patch::DumpAndExit to fix dumping
+          of coderefs [CT].
+
+
 0.04    2015-09-17 (PERLANCAR)
 
 	- Adjust to Complete::Util 0.36 (complete_file() split to
